# FSTSP

./: .gitignore  README.md  pyproject.toml
legacy/: fstsp_simulated_annealing.py  heuristic_v0.py  milp_v0.py
scripts/: render_example.py  run_experiments.py
src/fstsp/: __init__.py  examples.py  experiments.py  gurobi_env.py  heuristic.py  instance.py  instances.py  milp.py  sa.py  solution.py  validate.py
src/fstsp/viz/: __init__.py  _layout.py  _timing.py  mpl.py  plotly.py
tests/: test_end_depot.py  test_experiments.py  test_instances.py  test_milp.py  test_sa.py  test_thesis_example.py  test_viz.py
