[project]
name = "fstsp"
version = "0.1.0"
description = "Heuristic and exact methods for the Flying Sidekick TSP (Murray & Chu 2015 / Boccia et al. 2023)"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Rafael Hamelink" },
]
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
exact = ["gurobipy>=11.0"]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fstsp"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = ["legacy"]

[tool.ruff.lint]
select = [
    "E", "W", "F",
    "I",
    "N",
    "UP",
    "B",
    "SIM",
    "RUF",
]
ignore = [
    "N803",
    "N806",
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
